--- a/infrastructure/api/serverless.yml
+++ b/infrastructure/api/serverless.yml
@@ -5,7 +5,7 @@ plugins:
 
 custom:
   output:
-    file: ../../js/config/api_config.json
+    file: ../../src/build/config/api_config.json
   s3HostingBucket: ${self:service}-${self:provider.stage}-hosting
   ridesDynamoDBTable: ${self:service}-${self:provider.stage}-rides
   authStack: wild-rydes-auth-${self:provider.stage}
@@ -41,9 +41,10 @@ functions:
           method: POST
           integration: lambda
           cors: true
-#          authorizer:
-#            arn: ${self:custom.userPoolArn}
-
+          authorizer:
+            arn: ${self:custom.userPoolArn}
+          claims:
+            - email
 resources:
   Resources:
     S3HostingBucket:
