--- a/infrastructure/auth/serverless.yml
+++ b/infrastructure/auth/serverless.yml
@@ -5,7 +5,7 @@ plugins:
 
 custom:
   output:
-    file: ../../js/config/auth_config.json
+    file: ../../src/build/config/auth_config.json
   userPoolName: ${self:service}-${self:provider.stage}-user-pool
   iotEndpoint: "a358nin3b22der.iot.eu-west-1.amazonaws.com"
 
@@ -65,38 +65,14 @@ resources:
         UserPoolId:
           Ref: UserPool
 
-    UserGroupRole:
-      Type: AWS::IAM::Role
-      Properties:
-        RoleName: ${self:service}-${self:provider.stage}-user-role
-        AssumeRolePolicyDocument:
-          Version: '2012-10-17'
-          Statement:
-            - Effect: Allow
-              Principal:
-                Service:
-                  - iot.amazonaws.com
-              Action: sts:AssumeRole
-        Policies:
-          - PolicyName: "user-iot-role"
-            PolicyDocument:
-              Version: '2012-10-17'
-              Statement:
-                - Effect: Allow
-                  Action:
-                    - iot:Connect
-                    - iot:Subscribe
-                    - iot:Receive
-                  Resource: { "Fn::Join" : ["",["arn:aws:iot:",{"Ref":"AWS::Region"},":",{"Ref":"AWS::AccountId"},":topic/pushendpoint/"]] }
-
-    UserPoolUserGroup:
+    UserPoolAdminGroup:
       Type: "AWS::Cognito::UserPoolGroup"
       Properties:
-        Description: "The Cognito User Group for User users"
-        GroupName: "User"
+        Description: "The Cognito User Group for Admin users"
+        GroupName: "Admin"
         Precedence: 10
-        RoleArn:
-          Fn::GetAtt: UserGroupRole.Arn
+#        RoleArn:
+#          Fn::GetAtt: AdminGroupRole.Arn
         UserPoolId:
           Ref: UserPool
 
